# bods-opencorporates

./: .gitignore  README.md  pyproject.toml
src/bods_opencorporates/: __init__.py  cli.py  config.py  pipeline.py
src/bods_opencorporates/ingestion/: api_client.py  csv_reader.py  models.py
src/bods_opencorporates/output/: writer.py
src/bods_opencorporates/transform/: entities.py  identifiers.py  interests.py  persons.py  relationships.py
src/bods_opencorporates/utils/: countries.py  dates.py  statements.py
tests/: conftest.py  test_bods_compliance.py  test_countries.py  test_csv_reader.py  test_entities.py  test_identifiers.py  test_interests.py  test_persons.py  test_pipeline.py  test_relationships.py
